--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -4,6 +4,7 @@
 #+babel: :cache no
 #+options: ^:nil num:nil tags:nil toc:nil* OS-specific
 #+title: Emacs config, org-mode style.
+#+author: grym
 #+description: A literate programming-style exposition of my Emacs configuration
 This is the current version of my emacs configuration.  It is rendered to a
 byte-compiled =init.el= by way of a slightly kludgey bash script.
