--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -421,7 +421,7 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-roam.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-download.org"
-** org-jira
+** COMMENT org-jira
 
 #+begin_src emacs-lisp
 (use-package org-jira
