--- a/emacs-nougat/nougat/emacs/editing.org
+++ b/emacs-nougat/nougat/emacs/editing.org
@@ -15,7 +15,8 @@ fill-column is too large for the window, the text is wrapped at the window edge.
 #+end_quote
 
 #+begin_src emacs-lisp
-  (use-package visual-fill-column)
+  (use-package visual-fill-column
+:config (setq visual-fill-column-width 85))
 #+end_src
 
 *** fill at 85 characters
