--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -202,9 +202,9 @@ deal when editing files with potentially many editors at once.
 ** display line numbers
 Line numbers are good.
 #+begin_src emacs-lisp
-  (global-display-line-numbers-mode)
-;;  (setq display-line-numbers 'relative)
-  (setq display-line-numbers-width 4)
+    (global-display-line-numbers-mode)
+  ;;  (setq display-line-numbers 'relative)
+    (setq-default display-line-numbers-width 4)
 #+end_src
 
 ** COMMENT dashboard
@@ -421,6 +421,7 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-roam.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-download.org"
+#+include: "../nougat/packages/org-mode/extras/ox-hugo.org"
 ** COMMENT org-jira
 
 #+begin_src emacs-lisp
@@ -458,6 +459,7 @@ Override default project directory path.
 # (eval-after-load "org"
 #   (add-hook 'org-add-hook 'my/modify-org-done-face))
 # #+end_src
+
 
 
 * helm
