Update magit display

--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -1,13 +1,14 @@
 * magit
 
 #+BEGIN_SRC emacs-lisp
-(use-package magit
- :straight (magit :type git
-               :host github
-               :repo "magit/magit")
- :bind(("C-x g" . magit-status))
- :config (setq magit-log-section-commit-count 25)
-)
+    (use-package magit
+     :straight (magit :type git
+                   :host github
+                   :repo "magit/magit")
+     :bind(("C-x g" . magit-status))
+     :init (setq magit-status-margin '(t "%d %b %y %H:%M" magit-log-margin-width t 14))
+     :config (setq magit-log-section-commit-count 25)
+    )
 
 #+END_SRC
 
