--- a/emacs-nougat/nougat/packages/org-mode/setup.org
+++ b/emacs-nougat/nougat/packages/org-mode/setup.org
@@ -60,6 +60,7 @@ Getting org to play with straight.el is a little fussy.
     (setq org-agenda-file-regexp "\\`[^\\(.\\|flycheck_\\)].*\\.org\\'")
     ;; log  TODO state changes into the default LOGBOOK drawer.
     (setq org-log-into-drawer t)
+    (setq org-agenda-tags-column -79)
     )
 #+end_src
 
@@ -166,19 +167,19 @@ instead insert the new heading after the end of the current entry.
 
 *** ensure one-line between headers
 #+begin_src emacs-lisp
-  (defun org-mode--ensure-one-blank-line ()
-    (save-excursion (goto-char (point-min))
-                    (while (re-search-forward "#\\+[a-z_]+\\s-\\*" nil t)
-                      (replace-match "#+end_src
+  ;; (defun org-mode--ensure-one-blank-line ()
+  ;;   (save-excursion (goto-char (point-min))
+  ;;                   (while (re-search-forward "#\\+[a-z_]+\\s-\\*" nil t)
+  ;;                     (replace-match "#+end_src
 
-  ,*")
-                      (call-interactively 'org-previous-visible-heading)
-                      (call-interactively 'org-cycle)
-                      (call-interactively 'org-cycle))
-                    (org-save-outline-visibility t
-                      (org-mode))))
+  ;; *")
+  ;;                     (call-interactively 'org-previous-visible-heading)
+  ;;                     (call-interactively 'org-cycle)
+  ;;                     (call-interactively 'org-cycle))
+  ;;                   (org-save-outline-visibility t
+  ;;                     (org-mode))))
 
-  (add-hook 'org-mode-hook
-            (lambda ()
-              (add-hook 'before-save-hook 'org-mode--ensure-one-blank-line nil 'make-it-local)))
+  ;; (add-hook 'org-mode-hook
+  ;;           (lambda ()
+  ;;             (add-hook 'before-save-hook 'org-mode--ensure-one-blank-line nil 'make-it-local)))
 #+end_src
