make superscripts and subscripts need curlies

--- a/emacs-nougat/nougat/packages/org-mode/setup.org
+++ b/emacs-nougat/nougat/packages/org-mode/setup.org
@@ -69,6 +69,11 @@ Getting org to play with straight.el is a little fussy.
 #+begin_src emacs-lisp
   (add-hook 'org-mode-hook #'org-indent-mode)
 #+end_src
+*** superscripts
+require subscripts to need curlies: camel_case won't display weirdly this way
+#+begin_src emacs-lisp
+(setq org-use-sub-superscripts "{}")
+#+end_src
 
 *** pretty heading bullets
 #+begin_src emacs-lisp
