--- a/emacs-nougat/nougat/packages/org-mode/setup.org
+++ b/emacs-nougat/nougat/packages/org-mode/setup.org
@@ -188,3 +188,9 @@ instead insert the new heading after the end of the current entry.
   ;;           (lambda ()
   ;;             (add-hook 'before-save-hook 'org-mode--ensure-one-blank-line nil 'make-it-local)))
 #+end_src
+
+*** speed keys
+[[https://www.gnu.org/software/emacs/manual/html_node/org/Speed-keys.html][speed keys]]
+#+begin_src emacs-lisp
+(setq org-use-speed-commands t)
+#+end_src
