Disable org-roam and org-ql for now

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -444,7 +444,7 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-avy.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-projectile.org"
-#+INCLUDE: "../nougat/packages/org-mode/extras/org-roam.org"
+##+INCLUDE: "../nougat/packages/org-mode/extras/org-roam.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-download.org"
 #+include: "../nougat/packages/org-mode/extras/ox-hugo.org"
 ** COMMENT org-jira
@@ -503,7 +503,7 @@ project.)
   ;;             #'org-refile--insert-link)
 #+end_src
 
-** org-ql
+** COMMENT org-ql
 
 #+begin_src emacs-lisp
 (use-package helm-org
