--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -518,7 +518,17 @@ project.)
      )
 #+end_src
 
+** org-fragtog
+[[https://github.com/io12/org-fragtog][from]] here:
+#+begin_src emacs-lisp
+  (use-package org-fragtog
+   :straight (org-fragtog :type git
+                 :host github
+                 :repo "io12/org-fragtog")
+       )
+(add-hook 'org-mode-hook 'org-fragtog-mode)
 
+#+end_src
 
 * helm
 #+INCLUDE: "../nougat/packages/helm/setup.org"
