Initial support for helm-bibtex

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -540,6 +540,17 @@ project.)
 #+INCLUDE: "../nougat/packages/helm/extras/helm-flyspell.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-org-rifle.org"
 #+INCLUDE: "../nougat/packages/helm/extras/helm-projectile.org"
+** helm-bibtex
+[[https://github.com/tmalsburg/helm-bibtex#basic-configuration-recommended][helm-bibtex]] provides convenience methods for reference management.
+#+begin_src emacs-lisp
+(use-package helm-bibtex
+ :straight (helm-bibtex :type git
+               :host github
+               :repo "tmalsburg/helm-bibtex")
+ :config
+     )
+#+end_src
+
 * ivy
 https://github.com/abo-abo/swiper
 #+begin_quote
