--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -503,21 +503,6 @@ project.)
   ;;             #'org-refile--insert-link)
 #+end_src
 
-** COMMENT org-ql
-
-#+begin_src emacs-lisp
-(use-package helm-org
-     )
-#+end_src
-
-#+begin_src emacs-lisp
-(use-package org-ql
- :straight (org-ql :type git
-               :host github
-               :repo "alphapapa/org-ql")
-     )
-#+end_src
-
 ** org-fragtog
 [[https://github.com/io12/org-fragtog][from]] here:
 #+begin_src emacs-lisp
@@ -550,6 +535,21 @@ project.)
  :config
      )
 #+end_src
+** org-ql
+
+#+begin_src emacs-lisp
+(use-package helm-org
+     )
+#+end_src
+
+#+begin_src emacs-lisp
+(use-package org-ql
+ :straight (org-ql :type git
+               :host github
+               :repo "alphapapa/org-ql")
+     )
+#+end_src
+
 
 * ivy
 https://github.com/abo-abo/swiper
