--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -104,6 +104,18 @@ it works fine. [[https://old.reddit.com/r/emacs/comments/3a5kim/emacsclient_does
    :defer 1
   )
 #+end_src
+** material-theme
+
+#+begin_src emacs-lisp
+  ;;    (use-package material-theme
+  ;;     :straight (emacs-material-theme :type git
+  ;;                   :host github
+  ;;                   :repo "cpaulik/emacs-material-theme")
+  ;;     :config
+  ;;   (load-theme 'material t)
+  ;; :defer 1
+  ;;         )
+#+end_src
 
 * emacs
 Configuration related core editor functions are here.
@@ -409,6 +421,12 @@ Add fancy modeline, because why not.
   (winner-mode t)
 #+end_src
 
+** pdf-tools
+
+#+begin_src emacs-lisp
+(use-package pdf-tools)
+#+end_src
+
 * projectile
 [[https://github.com/bbatsov/projectile][projectile]] is a project interaction library for emacs.
 
@@ -515,6 +533,20 @@ project.)
 
 #+end_src
 
+** org-ref
+
+#+begin_src emacs-lisp
+    (use-package org-ref
+     :straight (org-ref :type git
+                   :host github
+                   :repo "jkitchin/org-ref")
+     :config
+     (setq reftex-default-bibliography bibtex-completion-bibliography
+           org-ref-default-bibliography bibtex-completion-bibliography)
+
+         )
+#+end_src
+
 * helm
 #+INCLUDE: "../nougat/packages/helm/setup.org"
 #+INCLUDE: "../nougat/packages/helm/extras/ace-jump-helm-line.org"
@@ -535,7 +567,11 @@ project.)
        :config
        (setq-default bibtex-completion-bibliography
              (concat my/org-path-name "library.bib"))
-       (setq-default bibtex-completion-pdf-field "Files"))
+       (setq-default bibtex-completion-pdf-field "Files")
+(setq bibtex-completion-notes-path (concat my/org-path-name "reference-notes"))
+       )
+
+
 #+end_src
 ** org-ql
 
@@ -694,37 +730,38 @@ LSP is the language server protocol
 ** window-hydra
 From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el][here]]
 #+begin_src emacs-lisp
-(use-package windmove)
-(use-package ace-window)
+  (use-package windmove)
+  (use-package ace-window
+    :bind (("C-<tab>" . ace-window)))
 
-(require 'windmove)
-(require 'ace-window)
+  (require 'windmove)
+  (require 'ace-window)
 
-;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
-(defhydra window-hydra (:hint nil)
+  ;;;###autoload (autoload 'window-hydra/body "window-hydra" nil t)
+  (defhydra window-hydra (:hint nil)
+    "
+    ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
+  _j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
+    ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
   "
-  ^_i_^                  _1_ single window   _3_^ split window      _b_alance windows
-_j_   _l_  move buffer   _o_ther window      _\\_ transpose frame   s_w_ap window
-  ^_k_^                  _←_ winner-undo     _0_^ delete window     _→_ winner redo
-"
-  ("i" (aw-swap-window (windmove-find-other-window 'up)))
-  ("j" (aw-swap-window (windmove-find-other-window 'left)))
-  ("l" (aw-swap-window (windmove-find-other-window 'right)))
-  ("k" (aw-swap-window (windmove-find-other-window 'down)))
-  ("1" delete-other-windows)
-  ("3" split-window-right)
-  ("b" balance-windows)
-  ("o" ace-window)
-  ("\\" transpose-frame)
-  ("w" ace-swap-window)
-  ("<left>" winner-undo)
-  ("0" delete-window)
-  ("<right>" winner-redo)
-  ("q" nil))
+    ("i" (aw-swap-window (windmove-find-other-window 'up)))
+    ("j" (aw-swap-window (windmove-find-other-window 'left)))
+    ("l" (aw-swap-window (windmove-find-other-window 'right)))
+    ("k" (aw-swap-window (windmove-find-other-window 'down)))
+    ("1" delete-other-windows)
+    ("3" split-window-right)
+    ("b" balance-windows)
+    ("o" ace-window)
+    ("\\" transpose-frame)
+    ("w" ace-swap-window)
+    ("<left>" winner-undo)
+    ("0" delete-window)
+    ("<right>" winner-redo)
+    ("q" nil))
 
-(provide 'window-hydra)
+  (provide 'window-hydra)
 
-(global-set-key (kbd "C-M-_") 'window-hydra/body)
+  (global-set-key (kbd "C-M-_") 'window-hydra/body)
 #+end_src
 
 ** COMMENT Other hydras
