--- a/emacs-nougat/nougat/packages/org-mode/setup.org
+++ b/emacs-nougat/nougat/packages/org-mode/setup.org
@@ -54,13 +54,16 @@ Getting org to play with straight.el is a little fussy.
     ;; Enable org capture
     (require 'org-capture)
 
-    ;; Enable template expansion
+    ;; Enable template expansion (<s, <q, etc.)
     (require 'org-tempo)
     ;; ignore flycheck files when looking in agenda
     (setq org-agenda-file-regexp "\\`[^\\(.\\|flycheck_\\)].*\\.org\\'")
     ;; log  TODO state changes into the default LOGBOOK drawer.
     (setq org-log-into-drawer t)
+    ;; wrap agenda tags properly for alignment
     (setq org-agenda-tags-column -79)
+    ;; start with follow-mode on in agenda
+    (setq org-agenda-start-with-follow-mode t)
     )
 #+end_src
 
