--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -495,7 +495,7 @@ from [[https://blog.aaronbieber.com/2017/03/19/organizing-notes-with-refile.html
 
 #+begin_src emacs-lisp
 (setq org-agenda-files (list my/org-path-name))
-(setq org-refile-targets '((org-agenda-files :maxlevel . 4)))
+(setq org-refile-targets '((org-agenda-files :maxlevel . 5)))
 
 (setq org-refile-allow-creating-parent-nodes 'confirm)
 #+end_src
@@ -732,7 +732,7 @@ From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el]
 #+begin_src emacs-lisp
   (use-package windmove)
   (use-package ace-window
-    :bind (("C-<tab>" . ace-window)))
+    :bind* (("C-<tab>" . ace-window)))
 
   (require 'windmove)
   (require 'ace-window)
