--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -722,6 +722,19 @@ LSP is the language server protocol
 
 ** docker
 #+INCLUDE: "../nougat/support/docker/dockerfile-mode.org"
+
+*** docker
+
+#+begin_src emacs-lisp
+(use-package docker
+ :straight (docker :type git
+               :host github
+               :repo "Silex/docker.el")
+ :bind ("C-c d" . docker)
+     )
+#+end_src
+
+
 ** direnv
 #+INCLUDE: "../nougat/support/direnv/direnv.org"
 
