--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -6,7 +6,7 @@
                    :host github
                    :repo "magit/magit")
      :bind(("C-x g" . magit-status))
-     :init (setq magit-status-margin '(nil "%d %b %y %H:%M" magit-log-margin-width t 14))
+;;     :init (setq magit-status-margin '(nil "%d %b %y %H:%M" magit-log-margin-width t 14))
      :config (setq magit-log-section-commit-count 25)
     )
 
