--- a/emacs-nougat/nougat/packages/org-mode/setup.org
+++ b/emacs-nougat/nougat/packages/org-mode/setup.org
@@ -50,7 +50,8 @@ Getting org to play with straight.el is a little fussy.
     (require 'org)
     (defalias #'org-git-version #'fix-org-git-version)
     (defalias #'org-release #'fix-org-release)
-
+    ;; fontify code in code blocks
+    (setq org-src-fontify-natively t)
     ;; Enable org capture
     (require 'org-capture)
 
