--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -460,7 +460,7 @@ Override default project directory path.
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-capture.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/htmlize.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/toc-org.org"
-#+INCLUDE: "../nougat/packages/org-mode/extras/ox-jira.org"
+##+INCLUDE: "../nougat/packages/org-mode/extras/ox-jira.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-gfm.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/ox-beamer.org"
 #+INCLUDE: "../nougat/packages/org-mode/extras/org-avy.org"
