--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -409,6 +409,20 @@ Add fancy modeline, because why not.
   (winner-mode t)
 #+end_src
 
+** crux
+
+#+begin_src emacs-lisp
+   (use-package crux
+    :straight (crux :type git
+                  :host github
+                  :repo "bbatsov/crux")
+    :config
+  (global-set-key (kbd "C-<backspace>") #'crux-kill-line-backwards)
+  (global-set-key (kbd "C-c S") #'crux-find-shell-init-file)
+        )
+#+end_src
+
+
 * projectile
 [[https://github.com/bbatsov/projectile][projectile]] is a project interaction library for emacs.
 
