--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -428,7 +428,7 @@ Add fancy modeline, because why not.
 #+begin_src emacs-lisp
 (use-package pdf-tools)
 #+end_src
-
+** crux
 #+begin_src emacs-lisp
    (use-package crux
     :straight (crux :type git
