--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -430,6 +430,14 @@ Add fancy modeline, because why not.
 (use-package pdf-tools)
 #+end_src
 
+** COMMENT polymode
+
+#+begin_src emacs-lisp
+  (use-package poly-org
+  :ensure t
+       )
+#+end_src
+
 * projectile
 [[https://github.com/bbatsov/projectile][projectile]] is a project interaction library for emacs.
 
