--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -399,14 +399,14 @@ Add fancy modeline, because why not.
        )
 #+end_src
 
-** perspective
+** COMMENT perspective
 #+begin_src emacs-lisp
 (use-package perspective
   :config
   (persp-mode))
 #+end_src
 
-** eyebrowse
+** COMMENT eyebrowse
 [[https://depp.brause.cc/eyebrowse/][eyebrowse]]
 #+begin_src emacs-lisp
 (use-package eyebrowse
@@ -439,7 +439,95 @@ Add fancy modeline, because why not.
   (global-set-key (kbd "C-c S") #'crux-find-shell-init-file)
         )
 #+end_src
+** transient-dwim
 
+#+begin_src emacs-lisp
+  (use-package transient-dwim
+   :straight (transient-dwim :type git
+                 :host github
+                 :repo "conao3/transient-dwim.el")
+   :bind ("M-?" . transient-dwim-dispatch)
+   )
+#+end_src
+** dired-hacks
+#+begin_src emacs-lisp
+  (use-package dired-hacks-utils)
+  (use-package dired-filter
+    :after    dired
+    :bind (:map dired-mode-map
+                ("/" . dired-filter-map))
+    :hook ((dired-mode . dired-filter-mode)
+           (dired-mode . dired-filter-group-mode))
+    :init (setq dired-filter-revert 'never
+                dired-filter-group-saved-groups
+                '(("default"
+                   ("Git"
+                    (directory . ".git")
+                    (file . ".gitignore")
+                    (file . ".gitattributes"))
+                   ("Directory"
+                    (directory))
+                   ("PDF"
+                    (extension . "pdf"))
+                   ("LaTeX"
+                    (extension "tex" "bib" "cls" "sty"))
+                   ("Source"
+                    (extension "c" "cpp" "hs" "rb" "m" "r" "cs" "el" "lisp" "html" "js" "css"))
+                   ("Python"
+                    (extension "py" "pyx" "pyc" "whl"))
+                   ("Documents"
+                    (extension "md" "rst" "txt" "docx" "pptx" "xlsx"))
+                   ("Text Data"
+                    (extension "yaml" "toml" "cfg" "json"))
+                   ("Packages"
+                    (extension "deb" "rpm" "dmg" "iso"))
+                   ("Org"
+                    (extension . "org"))
+                   ("Archives"
+                    (extension "zip" "rar" "gz" "bz2" "tar"))
+                   ("Videos"
+                    (extension "mp4" "webm" "mkv" "mov" "avi"))
+                   ("Audio"
+                    (extension "m4a" "aac" "wav" "mp3"))
+                   ("Images"
+                    (extension "jpg" "JPG" "webp" "png" "PNG" "jpeg" "JPEG" "bmp" "BMP" "TIFF" "tiff" "gif" "GIF" "svg"))))))
+
+  (when (executable-find "avfsd")
+    (use-package dired-avfs))
+
+  (use-package dired-rainbow
+    :after dired
+    :config
+    (dired-rainbow-define-chmod directory "#6cb2eb" "d.*")
+    (dired-rainbow-define html        "#eb5286" ("css" "less" "sass" "scss" "htm" "html" "jhtm" "mht" "eml" "mustache" "xhtml"))
+    (dired-rainbow-define xml         "#f2d024" ("xml" "xsd" "xsl" "xslt" "wsdl" "bib" "json" "msg" "pgn" "rss" "yaml" "yml" "rdata"))
+    (dired-rainbow-define document    "#9561e2" ("docm" "doc" "docx" "odb" "odt" "pdb" "pdf" "ps" "rtf" "djvu" "epub" "odp" "ppt" "pptx"))
+    (dired-rainbow-define markdown    "#ffed4a" ("org" "etx" "info" "markdown" "md" "mkd" "nfo" "pod" "rst" "tex" "textfile" "txt"))
+    (dired-rainbow-define database    "#6574cd" ("xlsx" "xls" "csv" "accdb" "db" "mdb" "sqlite" "nc"))
+    (dired-rainbow-define media       "#de751f" ("mp3" "mp4" "MP3" "MP4" "avi" "mpeg" "mpg" "flv" "ogg" "mov" "mid" "midi" "wav" "aiff" "flac" "webm" "mkv"))
+    (dired-rainbow-define image       "#f66d9b" ("tiff" "tif" "cdr" "gif" "ico" "jpeg" "jpg" "png" "psd" "eps" "svg" "webp"))
+    (dired-rainbow-define log         "#c17d11" ("log"))
+    (dired-rainbow-define shell       "#f6993f" ("awk" "bash" "bat" "sed" "sh" "zsh" "vim"))
+    (dired-rainbow-define interpreted "#38c172" ("py" "ipynb" "rb" "pl" "t" "msql" "mysql" "pgsql" "sql" "r" "clj" "cljs" "scala" "js"))
+    (dired-rainbow-define compiled    "#4dc0b5" ("asm" "cl" "lisp" "el" "c" "h" "c++" "h++" "hpp" "hxx" "m" "cc" "cs" "cp" "cpp" "go" "f" "for" "ftn" "f90" "f95" "f03" "f08" "s" "rs" "hi" "hs" "pyc" ".java"))
+    (dired-rainbow-define executable  "#8cc4ff" ("exe" "msi"))
+    (dired-rainbow-define compressed  "#51d88a" ("7z" "zip" "bz2" "tgz" "txz" "gz" "xz" "z" "Z" "jar" "war" "ear" "rar" "sar" "xpi" "apk" "xz" "tar"))
+    (dired-rainbow-define packaged    "#faad63" ("deb" "rpm" "apk" "jad" "jar" "cab" "pak" "pk3" "vdf" "vpk" "bsp"))
+    (dired-rainbow-define encrypted   "#ffed4a" ("gpg" "pgp" "asc" "bfe" "enc" "signature" "sig" "p12" "pem"))
+    (dired-rainbow-define fonts       "#6cb2eb" ("afm" "fon" "fnt" "pfb" "pfm" "ttf" "otf"))
+    (dired-rainbow-define partition   "#e3342f" ("dmg" "iso" "bin" "nrg" "qcow" "toast" "vcd" "vmdk" "bak"))
+    (dired-rainbow-define vc          "#0074d9" ("git" "gitignore" "gitattributes" "gitmodules"))
+    (dired-rainbow-define-chmod executable-unix "#38c172" "-.*x.*"))
+
+  (use-package dired-narrow
+    :after    dired
+    :bind (:map dired-narrow-map
+                ("<down>"  . dired-narrow-next-file)
+                ("<up>"    . dired-narrow-previous-file)
+                ("<right>" . dired-narrow-enter-directory)))
+  (use-package dired-collapse
+    :hook 'dired-mode-hook)
+#+end_src
 
 ** COMMENT polymode
 
@@ -448,6 +536,22 @@ Add fancy modeline, because why not.
   :ensure t
        )
 #+end_src
+
+** screenshot
+from [[https://old.reddit.com/r/emacs/comments/idz35e/emacs_27_can_take_svg_screenshots_of_itself/g2c2c6y/][alphapapa]]:
+#+begin_src emacs-lisp
+(defun screenshot-svg ()
+  "Save a screenshot of the current frame as an SVG image.
+Saves to a temp file and puts the filename in the kill ring."
+  (interactive)
+  (let* ((filename (make-temp-file "Emacs" nil ".svg"))
+         (data (x-export-frames nil 'svg)))
+    (with-temp-file filename
+      (insert data))
+    (kill-new filename)
+    (message filename)))
+#+end_src
+
 
 * projectile
 [[https://github.com/bbatsov/projectile][projectile]] is a project interaction library for emacs.
