--- a/emacs-nougat/nougat/emacs/editing.org
+++ b/emacs-nougat/nougat/emacs/editing.org
@@ -34,3 +34,7 @@ fill-column is too large for the window, the text is wrapped at the window edge.
   (setq tramp-default-method "ssh")
 #+end_src
 
+*** click-to-select-region
+#+begin_src emacs-lisp
+(define-key global-map (kbd "<S-down-mouse-1>") 'mouse-save-then-kill)
+#+end_src
